<resources>
    <string name="app_name">Koff</string>

    <string name="user_accounts_file">com.dinotom.project_koff_ma.USER_ACCOUNTS_FILE</string>
    <string name="user_token_key">com.dinotom.project_koff_ma.USER_TOKEN</string>
    <string name="user_name_key">com.dinotom.project_koff_ma.USER_NAME</string>

    <string name="temporary_file">com.dinotom.project_koff_ma.TEMPORARY_FILE</string>
    <string name="business_activities_file">com.dinotom.project_koff_ma.BUSINESS_ACTIVITIES_FILE</string>

    <string name="business_activities_sort_mode">com.dinotom.project_koff_ma.BUSINESS_ACTIVITIES_SORT_MODE</string>

    <string name="business_activities_filter_isworking">com.dinotom.project_koff_ma.BUSINESS_ACTIVITIES_FILTER_ISWORKING</string>
    <string name="business_activities_filter_isworking_title">Prikaži samo otvorene poslove</string>

    <string name="business_activities_filter_radius">com.dinotom.project_koff_ma.BUSINESS_ACTIVITIES_FILTER_RADIUS</string>
    <string name="business_activities_filter_radius_title">Maksimalna udaljenost</string>
    <string name="business_activities_filter_radius_unit">km</string>
    <string name="business_activities_filter_radius_summary">$1</string>

    <string name="business_activities_filter_location">com.dinotom.project_koff_ma.BUSINESS_ACTIVITIES_FILTER_LOCATION</string>
    <string name="business_activities_filter_location_title">Lokacija</string>

    <string name="business_activities_filter_location_current">com.dinotom.project_koff_ma.BUSINESS_ACTIVITIES_FILTER_LOCATION_CURRENT</string>
    <string name="business_activities_filter_location_current_title">Trenutna lokacija</string>
    <string name="business_activities_filter_location_choose">com.dinotom.project_koff_ma.BUSINESS_ACTIVITIES_FILTER_LOCATION_CHOOSE</string>
    <string name="business_activities_filter_location_choose_title">Odaberi lokaciju</string>

    <string name="business_activities_filter_location_is_custom">com.dinotom.project_koff_ma.BUSINESS_ACTIVITIES_FILTER_LOCATION_IS_CUSTOM</string>

    <string name="business_activities_search_term">com.dinotom.project_koff_ma.BUSINESS_ACTIVITIES_SEARCH_TERM</string>
    <string name="business_activities_search_ids">com.dinotom.project_koff_ma.BUSINESS_ACTIVITIES_SEARCH_IDS</string>
    <string name="business_activities_no_entities">Nema rezultata za traženu potkategoriju!</string>
    <string name="business_activities_no_results">Nema rezultata za traženi pojam!</string>

    <string name="business_info_confirm_rating">Potvrdi</string>
    <string name="business_info_delete_rating">Izbriši</string>

    <string name="comment_hint">Unesite komentar</string>
    <string name="comment_apply">Objavi komentar</string>

    <string name="delete_rating_warning">Jeste li sigurni da želite obrisati ocjenu?</string>
    <string name="delete_comment_warning">Jeste li sigurni da želite obrisati komentar?</string>
    <string name="delete_rating_and_comment_warning">Jeste li sigurni da želite obrisati ocjenu? Obrisat ćete istovremeno i komentar.</string>

    <string name="main_activity_event">MainActivityEvent</string>
    <string name="main_activity_login_event">MainActivityLoginEvent</string>
    <string name="no_entities_event">NoEntitiesEvent</string>
    <string name="comment_edit_event">CommentEditEvent</string>
    <string name="comment_delete_event">CommentDeleteEvent</string>
    <string name="user_name_change_event">UserNameChangeEvent</string>

    <string name="businessentity_distance">Udaljenost</string>
    <string name="businessentity_open">RADI</string>
    <string name="businessentity_closed">NE RADI</string>

    <string name="businessentity_sort_dialog_title">Sort</string>
    <string name="businessentity_sortby_distance">Udaljenost</string>
    <string name="businessentity_sortby_rating_desc">Najviša ocjena</string>
    <string name="businessentity_sortby_rating_asc">Najniža ocjena</string>
    <string name="businessentity_sortby_az">A-Z</string>
    <string name="businessentity_sortby_za">Z-A</string>

    <string name="businessentity_filter_dialog_title">Filter</string>
    <string name="title_activity_login">Sign in</string>

    <string name="login_username_hint">Unesite korisničko ime</string>
    <string name="login_empty_warning">Niste unijeli sve podatke!</string>
    <string name="login_failure_info">Neuspješna prijava! Provjerite svoje podatke.</string>
    <string name="login_password_hint">Unesite lozinku</string>
    <string name="login_appbar_title">Prijava</string>
    <string name="login_button">Prijavi se</string>
    <string name="logout_button">Odjavi se</string>

    <string name="login_successful_event">LOGIN_SUCCESSFUL_EVENT</string>
    <string name="login_failure_event">LOGIN_FAILURE_EVENT</string>

    <string name="registration_appbar_title">Registracija</string>
    <string name="registration_username_hint">Korisničko ime</string>
    <string name="registration_password_hint">Lozinka</string>
    <string name="registration_password_repeat_hint">Ponovi lozinku</string>
    <string name="registration_first_name_hint">Ime</string>
    <string name="registration_last_name_hint">Prezime</string>
    <string name="registration_email_hint">E-Mail</string>
    <string name="registration_button">Registriraj se</string>
    <string name="registration_clear_button">Reset</string>

    <string name="registration_error">Neuspjela registracija! Promijenite korisničko ime i/ili e-mail.</string>
    <string name="registration_username_error">Nedopušteno korisničko ime, unesite ponovo</string>
    <string name="registration_first_name_error">Nedopušteno ime, unesite ponovo</string>
    <string name="registration_last_name_error">Nedopušteno prezime, unesite ponovo</string>
    <string name="registration_email_error">Neispravno unesen e-mail, unesite ponovo</string>
    <string name="registration_password_error">Neispravno unesena lozinka, unesite ponovo</string>
    <string name="registration_passwords_not_equal_error">Lozinke nisu jednake, unesite ponovo</string>


</resources>
