<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen
        android:key="@string/business_activities_filter_location"
        android:title="@string/business_activities_filter_location_title"
        android:persistent="false">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.dinotom.project_koff_ma.business_entities.FilterLocationSettingsActivity"
            android:targetPackage="com.dinotom.project_koff_ma"/>

    </PreferenceScreen>
    <com.dinotom.project_koff_ma.business_entities.SeekBarPreference
        android:defaultValue="10"
        android:key="@string/business_activities_filter_radius"
        android:min="1"
        android:max="50"
        android:summary="@string/business_activities_filter_radius_summary"
        android:text="@string/business_activities_filter_radius_unit"
        android:title="@string/business_activities_filter_radius_title" />
    <CheckBoxPreference
        android:key="@string/business_activities_filter_isworking"
        android:title="@string/business_activities_filter_isworking_title"
        android:defaultValue="false" />
</PreferenceScreen>